ADD_DEFINITIONS( ${QT_DEFINITIONS} ) 
INCLUDE_DIRECTORIES( ${QT_INCLUDE_DIR} ${QT_QTCORE_INCLUDE_DIR}  ${CMAKE_CURRENT_SOURCE_DIR}/../libFreeMat )

ADD_DEFINITIONS( -DDYN_BLAS )
ADD_LIBRARY( dynblas
 	blas_wrap.cpp blas_dyn_link.cpp
	)
SET(OPTIONAL_LIBS ${OPTIONAL_LIBS} dynblas)
#ADD_SUBDIRECTORY( libBLAS_C ) 


